# bz

./: .bazelrc  .buckconfig  .gitignore  BUCK  BUILD  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  NOTICE  PLAN.md  buck2.py  defs.bzl  go.mod  go.sum  install.sh  proto_defs.bzl  rust-project.sh  rust-toolchain  test.py
app/buck2/: BUILD.bazel
app/buck2/src/: lib.rs
app/buck2_build_api/: BUILD.bazel  Cargo.toml
app/buck2_build_api/src/: actions.rs  build.rs  configure_dice.rs  materialize.rs  transition.rs
app/buck2_build_api/src/actions/: calculation.rs  impls.rs  registry.rs
app/buck2_build_api/src/actions/execute/: action_executor.rs  dice_data.rs
app/buck2_build_api/src/actions/impls/: solib_symlink.rs  workspace_status.rs
app/buck2_build_api/src/analysis/: calculation.rs  registry.rs
app/buck2_build_api/src/artifact_groups/: artifact_group_values.rs  calculation.rs
app/buck2_build_api/src/interpreter/: more.rs  rule_defs.rs
app/buck2_build_api/src/interpreter/rule_defs/: context.rs  depset.rs  provider.rs
app/buck2_build_api/src/interpreter/rule_defs/artifact/: methods.rs  starlark_artifact.rs  starlark_artifact_like.rs  starlark_declared_artifact.rs  starlark_output_artifact.rs  starlark_promise_artifact.rs
app/buck2_build_api/src/interpreter/rule_defs/bazel/: depset.rs
app/buck2_build_api/src/interpreter/rule_defs/cmd_args/: options.rs  param_file.rs  traits.rs  typ.rs
app/buck2_build_api_derive/: BUILD.bazel
app/buck2_build_api_derive/src/: provider.rs
app/buck2_cmd_log_client/: BUILD.bazel
app/buck2_cmd_log_client/src/: summary.rs
app/buck2_cmd_starlark_server/: BUILD.bazel
app/buck2_env/: BUILD.bazel
app/buck2_execute_impl/: BUILD.bazel
app/buck2_execute_impl/benchmarks/: sqlite_load_benchmark.py
app/buck2_execute_impl/src/: executors.rs
app/buck2_execute_impl/src/executors/: action_cache.rs  caching.rs  hybrid.rs  local.rs  local_action_cache.rs  re.rs  worker.rs
app/buck2_execute_impl/src/materializers/: deferred.rs  io.rs
app/buck2_execute_impl/src/materializers/deferred/: clean_stale.rs  command_processor.rs  extension.rs  tests.rs
app/buck2_execute_impl/src/re/: download.rs
app/buck2_execute_impl/src/sqlite/: incremental_state_db.rs  materializer_db.rs
app/buck2_execute_impl/src/sqlite/tables/: incremental_state_table.rs  materializer_state_table.rs
app/buck2_external_cells/: BUCK  BUILD.bazel  Cargo.toml
app/buck2_external_cells/src/: bundled.rs  bzlmod.rs  git.rs  lib.rs
app/buck2_external_cells/src/bzlmod/: generated_repos.rs
app/buck2_file_watcher/: BUILD.bazel
app/buck2_file_watcher/src/: file_watcher.rs  fs_hash_crawler.rs  lib.rs  no_watchfs.rs
app/buck2_file_watcher/src/watchman/: interface.rs
app/buck2_forkserver_proto/: BUILD.bazel
app/buck2_offline_archive/: BUILD.bazel
app/buck2_server/: BUCK  BUILD.bazel  Cargo.toml
app/buck2_server/src/: clean.rs  ctx.rs  dice_tracker.rs  lib.rs  lsp.rs
app/buck2_server/src/daemon/: common.rs  disk_state.rs  server.rs  state.rs
app/buck2_server_starlark_debug/: BUILD.bazel
app/buck2_test/: BUILD.bazel
app/buck2_test/src/: orchestrator.rs
app/buck2_test_api/: BUILD.bazel
app/buck2_transition/: BUILD.bazel
app/buck2_transition/src/transition/: calculation_apply_transition.rs  calculation_fetch_transition.rs  starlark.rs
app/buck2_validation/: BUILD.bazel
app/bz/: BUCK  BUILD.bazel  Cargo.toml  transition.bzl
app/bz/src/: check_user_allowed.rs  lib.rs  panic.rs  process_context.rs
app/bz/src/commands/: forkserver.rs  internal_test_runner.rs
app/bz_action_impl/: BUCK  BUILD.bazel  Cargo.toml
app/bz_action_impl/src/: context.rs  lib.rs  starlark_defs.rs
app/bz_action_impl/src/actions/impls/: cas_artifact.rs  copy.rs  download_file.rs  offline.rs  run.rs  symlinked_dir.rs  write.rs  write_json.rs  write_macros.rs
app/bz_action_impl/src/context/: copy.rs  download.rs  dynamic_output.rs  run.rs  unsorted.rs  write.rs
app/bz_action_impl/src/dynamic/: attrs.rs  bxl.rs  calculation.rs  deferred.rs  dynamic_actions_callable.rs  dynamic_actions_globals.rs  dynamic_value.rs  params.rs  resolved_dynamic_value.rs  storage.rs
app/bz_action_impl_tests/: BUCK  BUILD.bazel  Cargo.toml
app/bz_action_impl_tests/src/: context.rs  lib.rs
app/bz_analysis/: BUCK  BUILD.bazel  Cargo.toml
app/bz_analysis/src/analysis/: calculation.rs  env.rs  plugins.rs
app/bz_analysis/src/attrs/resolve/: configured_attr.rs  ctx.rs  node_to_attrs_struct.rs
app/bz_anon_target/: BUCK  BUILD.bazel  Cargo.toml
app/bz_anon_target/src/: anon_promises.rs  anon_target_attr.rs  anon_target_attr_coerce.rs  anon_target_attr_resolve.rs  anon_target_node.rs  anon_targets.rs  bxl.rs  promise_artifacts.rs  starlark_defs.rs
bazel_tools/: BUCK  BUILD.bazel
bazel_tools/src/conditions/: BUILD.bazel  BUILD.tools
bazel_tools/src/main/cpp/util/: BUILD.bazel
bazel_tools/tools/: BUILD.bazel
bazel_tools/tools/allowlists/function_transition_allowlist/: BUILD.bazel
bazel_tools/tools/bash/: BUILD.bazel
bazel_tools/tools/bash/runfiles/: BUILD.bazel
bazel_tools/tools/build_defs/build_info/: BUILD.bazel  bazel_cc_build_info.bzl  bazel_java_build_info.bzl
bazel_tools/tools/build_defs/build_info/templates/: BUILD.bazel
bazel_tools/tools/build_defs/cc/: BUILD.bazel
bazel_tools/tools/build_defs/repo/: http.bzl
bazel_tools/tools/cpp/: BUILD.bazel  cc_toolchain_config_lib.bzl  toolchain_utils.bzl
bazel_tools/tools/cpp/modules_tools/: BUILD.bazel  generate-modmap
bazel_tools/tools/jdk/: BUILD.bazel  java_plugins_flag_alias.bzl  launcher_flag_alias.bzl  proguard_allowlister.py  proguard_allowlister_test.py
bazel_tools/tools/launcher/: empty.sh
bazel_tools/tools/objc/: BUILD.bazel  dummy.c  objc_dummy.mm  xcode_config.bzl
bazel_tools/tools/osx/: BUILD.bazel
bazel_tools/tools/proto/: BUILD.bazel
bazel_tools/tools/python/: BUILD.bazel  python_version.bzl
bazel_tools/tools/test/: BUILD.bazel
bazel_tools/tools/zip/: BUILD.bazel
bazel_tools/tools/zip/zipper/: zipper
games/: BUCK  BUILD.bazel  Cargo.toml
pagable_derive/: BUILD.bazel
(+2911 files in other folders)
