filegroup(
    name = "prelude_sources",
    srcs = glob(
        ["prelude/**"],
        exclude = [
            "prelude/**/BUILD.bazel",
            "prelude/**/.DS_Store",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bazel_tools_sources",
    srcs = ["//bazel_tools:bazel_tools_sources"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rust_toolchain_file",
    srcs = ["rust-toolchain"],
    visibility = ["//visibility:public"],
)

alias(
    name = "buck2",
    actual = "//app/bz:buck2_bin",
    visibility = ["//visibility:public"],
)
