filegroup(
    name = "prelude_sources",
    srcs = glob(
        ["cells/prelude/**"],
        exclude = [
            "cells/prelude/**/BUILD.bazel",
            "cells/prelude/**/.DS_Store",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bazel_tools_sources",
    srcs = ["//cells/bazel_tools:bazel_tools_sources"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rust_toolchain_file",
    srcs = ["rust-toolchain"],
    visibility = ["//visibility:public"],
)

alias(
    name = "bz",
    actual = "//app/bz:bz",
    visibility = ["//visibility:public"],
)
