[workspace]
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    "app/bz",
    "app/bz_action_impl",
    "app/bz_action_impl_tests",
    "app/bz_action_metadata_proto",
    "app/bz_analysis",
    "app/bz_anon_target",
    "app/bz_cmd_audit_client",
    "app/bz_cmd_audit_server",
    "app/bz_bxl",
    "app/bz_build_info",
    "app/bz_certs",
    "app/bz_cfg_constructor",
    "app/bz_client",
    "app/bz_client_ctx",
    "app/bz_cmd_completion_client",
    "app/bz_cmd_debug_client",
    "app/bz_cmd_docs_client",
    "app/bz_cmd_docs_server",
    "app/bz_cmd_log_client",
    "app/bz_cmd_query_server",
    "app/bz_cmd_rage_client",
    "app/bz_common",
    "app/bz_env",
    "app/bz_configured",
    "app/bz_core",
    "app/bz_cli_proto",
    "app/bz_cmd_targets_server",
    "app/bz_daemon",
    "app/bz_directory",
    "app/bz_downward_api",
    "app/bz_downward_api_proto",
    "app/bz_error",
    "app/bz_error_derive",
    "app/bz_error_tests",
    "app/bz_errorformat",
    "app/bz_event_observer",
    "app/bz_events",
    "app/bz_event_log",
    "app/bz_execute",
    "app/bz_execute_impl",
    "app/bz_execute_local",
    "app/bz_external_cells",
    "app/bz_external_cells_bundled",
    "app/bz_grpc",
    "app/bz_health_check",
    "app/bz_health_check_proto",
    "app/bz_http",
    "app/bz_install_proto",
    "app/bz_interpreter",
    "app/bz_interpreter_for_build",
    "app/bz_interpreter_for_build_tests",
    "app/bz_miniperf",
    "app/bz_miniperf_proto",
    "app/bz_node",
    "app/bz_node_tests",
    "app/bz_offline_archive",
    "app/bz_artifact",
    "app/bz_cmd_starlark_client",
    "app/bz_cmd_starlark_server",
    "app/bz_test",
    "app/bz_test_api",
    "app/bz_test_proto",
    "app/bz_test_runner",
    "app/bz_forkserver",
    "app/bz_forkserver_proto",
    "app/bz_fs",
    "app/bz_profile",
    "app/bz_protoc_dev",
    "app/bz_query",
    "app/bz_query_impls",
    "app/bz_query_parser",
    "app/bz_query_derive",
    "app/bz_re_configuration",
    "app/bz_resource_control",
    "app/bz_server",
    "app/bz_server_commands",
    "app/bz_server_ctx",
    "app/bz_server_starlark_debug",
    "app/bz_transition",
    "app/bz_util",
    "app/bz_data",
    "app/bz_worker_proto",
    "app/bz_wrapper_common",
    "app/bz_build_api",
    "app/bz_build_api_derive",
    "app/bz_build_api_tests",
    "app/bz_subscription_proto",
    "app/bz_critical_path",
    "app/bz_build_signals",
    "app/bz_build_signals_impl",
    "app/bz_eden",
    "app/bz_validation",
    "app/bz_host_sharing_proto",
    "dice/dice",
    "dice/dice_error",
    "dice/dice_examples",
    "dice/dice_futures",
    "dice/dice_tests",
    # @oss-disable: "dice/fuzzy_dice",
    "dice/read_dump",
    # @oss-disable: "host_sharing",
    "games",
    "gazebo/display_container",
    "gazebo/cmp_any",
    "gazebo/gazebo",
    "gazebo/gazebo_derive",
    "gazebo/strong_hash",
    "gazebo/strong_hash_derive",
    "gazebo/strong_hash_tests",
    "integrations/resources/rust",
    "integrations/rust-project",
    "pagable",
    "pagable_derive",
    "remote_execution/oss/re_grpc",
    "remote_execution/oss/re_grpc_proto",
    "starlark-rust/starlark",
    "starlark-rust/starlark_bin",
    "starlark-rust/starlark_derive",
    "starlark-rust/starlark_lsp",
    "starlark-rust/starlark_map",
    "starlark-rust/starlark_syntax",
    "bz_sketches",
    "shed/setsketch",
    "shed/bz_hash",
    "shed/static_interner",
    "shed/lock_free_hashtable",
    "shed/lock_free_vec",
    "shed/provider",
    "shed/three_billion_instructions",
    "superconsole",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/facebook/buck2"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fbcode_build)', 'cfg(buck_build)'] }

[workspace.dependencies]
anyhow = "1.0.98"
anymap3 = "1.0.1"
arc-swap = "1.6.0"
argfile = "0.2.1"
assert_matches = "1.5"
async-compression = { version = "0.4.41", features = ["tokio", "brotli", "deflate", "gzip", "zstd"] }
async-condvar-fair = { version = "1.0", features = ["parking_lot_0_12", "tokio"] }
async-recursion = "1.1.1"
async-scoped = { version = "0.9", features = ["use-tokio"] }
async-stream = "0.3"
async-trait = "0.1.86"
atomic = "0.5.3"
backtrace = "0.3.76"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = { version = "=1.8.2", features = ["default", "rayon", "std", "traits-preview"] }
brotli = "8.0.2"
bumpalo = "3.19.1"
bzip2 = "0.5.2"
bytemuck = { version = "1.24", features = ["const_zeroed", "derive", "min_const_generics", "must_cast", "nightly_portable_simd", "nightly_stdsimd"] }
byteorder = "1.5"
bytes = "1.11.1"
bytesize = "2.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive", "env", "string"] }
clap_complete = "4.5.55"
common-path = "1.0.0"
compact_str = { version = "0.8.0", features = ["serde"] }
console = "0.15.11"
const-oid = { version = "0.9.6", features = ["db"] }
const_format = "0.2.32"
constant_time_eq = "0.2.4"
convert_case = "0.10.0"
criterion = { version = "0.5.1", features = [] }
crossbeam = "0.8"
crossbeam-channel = "0.5.15"
crossbeam-epoch = "0.9.18"
crossterm = "0.29"
csv = "1.3"
ctor = "0.1.26"
dashmap = "6.1.0"
debugserver-types = "0.5.0"
derivative = "2.2"
derive_more = { version = "1.0.0", features = ["full"] }
digest = { version = "0.10", features = ["oid"] }
dirs = "6.0"
dunce = "1.0.5"
either = "1.8"
enum-iterator = "2.1"
enum-map = "2.7.3"
env_logger = "0.11.8"
equivalent = "1.0.2"
erased-serde = "0.4.9"
faccess = "0.2.4"
fancy-regex = "0.16.2"
filetime = "0.2.27"
flate2 = "1.1.9"
fnv = "1.0"
fs4 = { version = "0.9.1", features = ["sync"] }
futures = { version = "0.3.31", features = ["async-await", "compat"] }
futures-intrusive = "0.4.2"
fxhash = "0.2.1"
glob = "0.3.2"
globset = "0.4.13"
h2 = { version = "^0.4.13" } # force version bump for https://github.com/facebook/buck2/issues/1123
hashbrown = "0.17"
hex = "0.4.3"
hostname = "0.3.1"
http = "1.4.0"
http-body-util = "0.1.0"
httparse = "1.7.1"
httptest = "0.16"
humantime = "2.1"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-http-proxy = "1.0"
hyper-rustls = { version = "0.27.0", features = ["http2"] }
hyper-timeout = "0.5"
hyper-util = "0.1.10"
hyperlocal = { version = "0.9", features = ["client"] }
image = { version = "0.25.9", features = ["png"], default-features = false }
indent_write = "2.2.0"
indenter = "0.3.4"
index_vec = "0.1.4"
indexmap = { version = "2.13.0", features = ["serde"] }
indoc = "2.0.2"
inferno = { version = "0.11.21", default-features = false }
internment = { version = "0.8", features = ["arc"] }
inventory = "0.3.21"
ipnetwork = "0.20.0"
is_proc_translated = "0.1.1"
itertools = "0.14.0"
lalrpop = { version = "0.19.12", artifact = "bin" }
lalrpop-util = "0.19.12"
libc = "0.2.158"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
linkme = { version = "0.3.32", features = ["used_linker"] }
log = "0.4.27"
logos = "0.15"
lru = "0.16.3"
lsp-server = "0.7.9"
lsp-types = "0.94.1"
maplit = "1.0.2"
mappable-rc = { version = "0.1.1", features = ["std"] }
memchr = "2.8.0"
memmap2 = "0.9.5"
memoffset = "0.9.1"
mimalloc = "0.1.48"
multimap = "0.8.2"
native-tls = "0.2"
nix = { version = "0.30.1", features = ["dir", "event", "hostname", "inotify", "ioctl", "mman", "mount", "net", "poll", "ptrace", "reboot", "resource", "sched", "signal", "term", "time", "user", "zerocopy"] }
nom = "8"
nom-language = "0.1"
notify = "8.2.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
num_cpus = "1.16"
num_enum = "0.7.4"
object = "0.36.7"
once_cell = "1.21"
os_str_bytes = { version = "6.6.0", features = ["conversions"] }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
paste = "1.0.15"
pathdiff = "0.2"
perf-event = "0.4"
perf-event-open-sys = "5.0"
pin-project = "1.1.10"
plist = "1.7.1"
postcard = { version = "1.0.8", features = ["use-crc", "use-std"] }
pretty_assertions = "1.2.1"
probminhash = { git = "https://github.com/krallin/probminhash", rev = "3d6b7a5315305c2893a7a04e0de9e23b305992c5", default-features = false } # WAITING_FOR_PR https://github.com/jean-pierreBoth/probminhash/pull/4
proc-macro2 = "1.0.106"
prost = "0.14.3"
prost-build = "0.14.3"
prost-derive = "0.14.3"
prost-types = "0.14.3"
protoc-bin-vendored = "3.0.0"
psutil = "3.2"
quick-xml = { version = "0.37", features = ["overlapped-lists", "serialize"] }
quote = "1.0.44"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
rand_xoshiro = "0.8"
ref-cast = "1.0.18"
regex = "1.12.2"
relative-path = { version = "1.7.0", features = ["serde"] }
ring = "0.17.14"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustc-hash = { version = "2.1.1" }
rustls = { package = "rustls", version = "0.23.37", features = ["aws-lc-rs", "ring"], default-features = false }
rustls-native-certs = { version = "0.8.1" }
rustls-pki-types = { version = "1.0", features = ["alloc", "std"] }
rustyline = "14.0"
scopeguard = "1.2.0"
sequence_trie = "0.3.6"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_path_to_error = "0.1"
sevenz-rust = "0.6.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
shlex = "1.3"
siphasher = "0.3.11"
slab = "0.4.12"
slog = "2.8.2"
smallvec = { version = "1.15", features = ["const_generics", "const_new", "serde", "specialization", "union", "write"] }
static_assertions = "1.1.0"
strsim = "0.10.0"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
syn = { version = "2.0.110", features = ["extra-traits", "full", "visit"] }
sync_wrapper = "0.1.2"
sys-info = "0.9.1"
sysinfo = "0.38.4"
take_mut = "0.2.2"
tar = "0.4.44"
tempfile = "3.22"
termimad = "0.34.1"
termios = "0.3"
termwiz = "0.23"
test-case = "3.3.1"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
thiserror = "2.0.18"
threadpool = "1.8.1"
tikv-jemallocator = { version = "0.6.1", features = ["profiling"] }
tokio = { version = "1.50.0", features = ["full", "test-util", "tracing"] }
tokio-rustls = { version = "0.26" }
tokio-stream = { version = "0.1.17", features = ["fs", "io-util", "net", "sync", "time", "signal"] }
tokio-util = { version = "0.7.15", features = ["full"] }
toml = "0.9.11"
tonic = { version = "0.14.5", features = ["tls-native-roots", "tls-ring", "tls-webpki-roots"] }
tonic-build = { version = "0.14.5" }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = { version = "0.14.5" }
tower = { version = "0.5.3", features = ["util"] }
tower-layer = "0.3.1"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
triomphe = "0.1.11"
trybuild = "1.0.56"
twox-hash = "1.6.1"
typed-arena = "2.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.22.0", features = ["v4"] }
walkdir = "2.3.2"
which = "4.3.0"
windows-sys = { version = "0.61.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_ProcessStatus", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading"] }
x509-parser = "0.18.0"
xattr = "1.5.0"
xz2 = "0.1.7"
zstd = "0.13.3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

# @oss-disable: fbinit.path = "../common/rust/shed/fbinit"
fbinit.version = "0.2"
# @oss-disable: sorted_vector_map.path = "../common/rust/shed/sorted_vector_map"
sorted_vector_map.git = "https://github.com/facebookexperimental/rust-shed" # @oss-enable
sorted_vector_map.version = "0.2"

allocative.features = ["anyhow", "bumpalo", "dashmap", "either", "futures", "hashbrown", "indexmap", "num-bigint", "once_cell", "parking_lot", "prost-types", "relative-path", "serde_json", "slab", "smallvec", "compact_str", "sorted_vector_map", "tokio", "triomphe"]
allocative.path = "allocative/allocative"
allocative.version = "0.3.1"
bz_hash = { path = "shed/bz_hash" }
cmp_any = { path = "gazebo/cmp_any" }
dice = { path = "dice/dice" }
dice_error = { path = "dice/dice_error" }
dice_futures = { path = "dice/dice_futures" }
display_container = { path = "gazebo/display_container" }
dupe.path = "gazebo/dupe"
dupe.version = "0.9.0"
gazebo.features = ["str_pattern_extensions"]
gazebo.path = "gazebo/gazebo"
gazebo.version = "0.8.1"
host_sharing = { path = "host_sharing" }
lock_free_hashtable = { version = "0.1.0", path = "shed/lock_free_hashtable" }
lock_free_vec = { path = "shed/lock_free_vec" }
pagable = { path = "pagable", features = ["tokio"] }
pagable_derive = { path = "pagable_derive" }
provider = { path = "shed/provider" }
remote_execution = { path = "remote_execution/oss/re_grpc" }
setsketch = { path = "shed/setsketch" }
sled = "0.34"
starlark = { version = "0.13.0", path = "starlark-rust/starlark" }
starlark_lsp = { version = "0.13.0", path = "starlark-rust/starlark_lsp" }
starlark_map = { version = "0.13.0", path = "starlark-rust/starlark_map" }
starlark_syntax = { version = "0.13.0", path = "starlark-rust/starlark_syntax" }
static_interner = { path = "shed/static_interner" }
strong_hash.features = ["num-bigint", "triomphe"]
strong_hash.path = "gazebo/strong_hash"
strong_hash_derive = { path = "gazebo/strong_hash_derive" }
three_billion_instructions = { path = "shed/three_billion_instructions" }

bz_action_impl = { path = "app/bz_action_impl" }
bz_action_metadata_proto = { path = "app/bz_action_metadata_proto" }
bz_analysis = { path = "app/bz_analysis" }
bz_anon_target = { path = "app/bz_anon_target" }
bz_artifact = { path = "app/bz_artifact" }
bz_build_api = { path = "app/bz_build_api" }
bz_build_api_derive = { path = "app/bz_build_api_derive" }
bz_build_info = { path = "app/bz_build_info" }
bz_build_signals = { path = "app/bz_build_signals" }
bz_build_signals_impl = { path = "app/bz_build_signals_impl" }
bz_bxl = { path = "app/bz_bxl" }
bz_certs = { path = "app/bz_certs" }
bz_cfg_constructor = { path = "app/bz_cfg_constructor" }
bz_cli_proto = { path = "app/bz_cli_proto" }
bz_client = { path = "app/bz_client" }
bz_client_ctx = { path = "app/bz_client_ctx" }
bz_cmd_audit_client = { path = "app/bz_cmd_audit_client" }
bz_cmd_audit_server = { path = "app/bz_cmd_audit_server" }
bz_cmd_completion_client = { path = "app/bz_cmd_completion_client" }
bz_cmd_debug_client = { path = "app/bz_cmd_debug_client" }
bz_cmd_docs_client = { path = "app/bz_cmd_docs_client" }
bz_cmd_docs_server = { path = "app/bz_cmd_docs_server" }
bz_cmd_log_client = { path = "app/bz_cmd_log_client" }
bz_cmd_query_server = { path = "app/bz_cmd_query_server" }
bz_cmd_rage_client = { path = "app/bz_cmd_rage_client" }
bz_cmd_starlark_client = { path = "app/bz_cmd_starlark_client" }
bz_cmd_starlark_server = { path = "app/bz_cmd_starlark_server" }
bz_cmd_targets_server = { path = "app/bz_cmd_targets_server" }
bz_common = { path = "app/bz_common" }
bz_configured = { path = "app/bz_configured" }
bz_core = { path = "app/bz_core" }
bz_critical_path = { path = "app/bz_critical_path" }
bz_daemon = { path = "app/bz_daemon" }
bz_data = { path = "app/bz_data" }
bz_directory = { path = "app/bz_directory" }
bz_downward_api = { path = "app/bz_downward_api" }
bz_downward_api_proto = { path = "app/bz_downward_api_proto" }
bz_eden = { path = "app/bz_eden" }
bz_env = { path = "app/bz_env" }
bz_error = { path = "app/bz_error" }
bz_error_derive = { path = "app/bz_error_derive" }
bz_errorformat = { path = "app/bz_errorformat" }
bz_event_log = { path = "app/bz_event_log" }
bz_event_observer = { path = "app/bz_event_observer" }
bz_events = { path = "app/bz_events" }
bz_execute = { path = "app/bz_execute" }
bz_execute_impl = { path = "app/bz_execute_impl" }
bz_execute_local = { path = "app/bz_execute_local" }
bz_external_cells = { path = "app/bz_external_cells" }
bz_external_cells_bundled = { path = "app/bz_external_cells_bundled" }
bz_file_watcher = { path = "app/bz_file_watcher" }
bz_forkserver = { path = "app/bz_forkserver" }
bz_forkserver_proto = { path = "app/bz_forkserver_proto" }
bz_fs = { path = "app/bz_fs" }
bz_grpc = { path = "app/bz_grpc" }
bz_health_check = { path = "app/bz_health_check" }
bz_health_check_proto = { path = "app/bz_health_check_proto" }
bz_host_sharing_proto = { path = "app/bz_host_sharing_proto" }
bz_http = { path = "app/bz_http" }
bz_install_proto = { path = "app/bz_install_proto" }
bz_interpreter = { path = "app/bz_interpreter" }
bz_interpreter_for_build = { path = "app/bz_interpreter_for_build" }
bz_interpreter_for_build_tests = { path = "app/bz_interpreter_for_build_tests" }
bz_miniperf = { path = "app/bz_miniperf" }
bz_miniperf_proto = { path = "app/bz_miniperf_proto" }
bz_node = { path = "app/bz_node" }
bz_offline_archive = { path = "app/bz_offline_archive" }
bz_profile = { path = "app/bz_profile" }
bz_protoc_dev = { path = "app/bz_protoc_dev" }
bz_query = { path = "app/bz_query" }
bz_query_derive = { path = "app/bz_query_derive" }
bz_query_impls = { path = "app/bz_query_impls" }
bz_query_parser = { path = "app/bz_query_parser" }
bz_re_configuration = { path = "app/bz_re_configuration" }
bz_resource_control = { path = "app/bz_resource_control" }
bz_server = { path = "app/bz_server" }
bz_server_commands = { path = "app/bz_server_commands" }
bz_server_ctx = { path = "app/bz_server_ctx" }
bz_server_starlark_debug = { path = "app/bz_server_starlark_debug" }
bz_sketches = { path = "bz_sketches" }
bz_subscription_proto = { path = "app/bz_subscription_proto" }
bz_test = { path = "app/bz_test" }
bz_test_api = { path = "app/bz_test_api" }
bz_test_proto = { path = "app/bz_test_proto" }
bz_test_runner = { path = "app/bz_test_runner" }
bz_transition = { path = "app/bz_transition" }
bz_util = { path = "app/bz_util" }
bz_validation = { path = "app/bz_validation" }
bz_worker_proto = { path = "app/bz_worker_proto" }
bz_wrapper_common = { path = "app/bz_wrapper_common" }

[profile.release]
incremental = true
panic = "abort"
# The line below increases build times from 50s to 84s, with no observed impact on runtime speed.
# But maybe for some benchmarks it will show more noticeable variation.
# lto = "thin"

# Use with: --profile=release-symbols -Z unstable-options
[profile.release-symbols]
debug = true
incremental = true
inherits = "release"

[profile.dev]
debug = true
incremental = true
lto = "off"
opt-level = 1
panic = "abort"

[profile.test]
incremental = true

[profile.bench]
incremental = true

[patch.crates-io]
# For https://github.com/jimblandy/perf-event/pull/29
# Base on the comment in https://github.com/jimblandy/perf-event/pull/53, we will no long need this patch in future.
perf-event = { git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4", version = "0.4" }
perf-event-open-sys = { git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4", version = "5.0" }
