module(
    name = "bz",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_java", version = "9.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")
bazel_dep(name = "llvm", version = "0.8.5")

RUST_EDITION = "2024"
RUST_VERSION = "nightly/2026-01-18"
SUPPORTED_RUST_PLATFORM_TRIPLES = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
    "wasm32-wasip1",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-nixos-gnu",
]

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    extra_target_triples = SUPPORTED_RUST_PLATFORM_TRIPLES + [
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
    extra_rustc_flags = [
        "--cfg=tokio_unstable",
    ],
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

register_toolchains(
    "@llvm//toolchain:linux_aarch64_to_linux_aarch64",
    "@llvm//toolchain:linux_x86_64_to_linux_x86_64",
    "@llvm//toolchain:macos_aarch64_to_linux_aarch64",
    "@llvm//toolchain:macos_aarch64_to_linux_x86_64",
    "@llvm//toolchain:macos_x86_64_to_linux_aarch64",
    "@llvm//toolchain:macos_x86_64_to_linux_x86_64",
)

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.platform(buildbuddy_container_image = "UBUNTU24_04_IMAGE")
use_repo(buildbuddy, "buildbuddy_toolchain")
register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_arm64",
)

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    edition = RUST_EDITION,
    name = "rust_host_tools_nightly",
    version = RUST_VERSION,
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    crate = "tokio",
    deps = ["@crates//:tracing"],
)
crate.annotation(
    crate = "protoc-bin-vendored-linux-aarch_64",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-linux-ppcle_64",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-linux-s390_64",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-linux-x86_32",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-linux-x86_64",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-macos-aarch_64",
    data_glob = ["bin/**", "include/**"],
    extra_aliased_targets = {
        "protoc-bin-vendored-macos-aarch_64": "protoc_bin_vendored_macos_aarch_64",
    },
)
crate.annotation(
    crate = "protoc-bin-vendored-macos-x86_64",
    data_glob = ["bin/**", "include/**"],
)
crate.annotation(
    crate = "protoc-bin-vendored-win32",
    data_glob = ["bin/**", "include/**"],
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.Bazel.lock",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly//:rust_host_tools",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = SUPPORTED_RUST_PLATFORM_TRIPLES,
)
use_repo(
    crate,
    "crates",
    "crates__protoc-bin-vendored-linux-aarch_64-3.2.0",
    "crates__protoc-bin-vendored-linux-ppcle_64-3.2.0",
    "crates__protoc-bin-vendored-linux-s390_64-3.2.0",
    "crates__protoc-bin-vendored-linux-x86_32-3.2.0",
    "crates__protoc-bin-vendored-linux-x86_64-3.2.0",
    "crates__protoc-bin-vendored-macos-aarch_64-3.2.0",
    "crates__protoc-bin-vendored-macos-x86_64-3.2.0",
    "crates__protoc-bin-vendored-win32-3.2.0",
)
