package(default_visibility = ["//visibility:public"])

filegroup(
    name = "bazel_tools_sources",
    srcs = glob(
        [
            "**",
            "**/.*",
        ],
        exclude = [
            "**/.DS_Store",
        ],
    ) + [
        "//bazel_tools/tools/allowlists/function_transition_allowlist:pkg_sources",
        "//bazel_tools/src/conditions:pkg_sources",
        "//bazel_tools/src/main/cpp/util:pkg_sources",
        "//bazel_tools/src/tools/launcher:pkg_sources",
        "//bazel_tools/third_party/ijar:pkg_sources",
        "//bazel_tools/tools/android:pkg_sources",
        "//bazel_tools/tools/bash:pkg_sources",
        "//bazel_tools/tools/bash/runfiles:pkg_sources",
        "//bazel_tools/tools/build_defs/cc:pkg_sources",
        "//bazel_tools/tools/build_defs/build_info:pkg_sources",
        "//bazel_tools/tools/build_defs/repo:pkg_sources",
        "//bazel_tools/tools/cpp:pkg_sources",
        "//bazel_tools/tools/jdk:pkg_sources",
        "//bazel_tools/tools/objc:pkg_sources",
        "//bazel_tools/tools/osx:pkg_sources",
        "//bazel_tools/tools/proto:pkg_sources",
        "//bazel_tools/tools/python:pkg_sources",
        "//bazel_tools/tools/python/runfiles:pkg_sources",
        "//bazel_tools/tools/sh:pkg_sources",
        "//bazel_tools/tools/test:pkg_sources",
        "//bazel_tools/tools:pkg_sources",
        "//bazel_tools/tools/zip:pkg_sources",
    ],
)
